welcome.lessons.welcome.methods.returning.MethodsReturning.scala.error
Program:23: error: ';' expected but 'return' found.
  }return vuBiscuit
   ^